# patotta-stone-desc-normalizer

./: .gitignore  package.json
.github/workflows/: pr.yml
migrations/: description.sql  pattern.sql
src/: App.tsx  styles.css
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/db/: sqlite.db
src-tauri/migrations/: 01_create_load_history_table.sql  02_create_description_table.sql  20240602040743_create_description_table.sql  20240602040835_create_pattern_table.sql  20240602053131_create_description_contains_pattern_table.sql
src-tauri/src/: custom_error.rs  db.rs  error.rs  load.rs  main.rs  utils.rs
src-tauri/src/db/: connection.rs  db_error.rs  description.rs  load.rs
src-tauri/src/utils/: path.rs  util_errors.rs
src/components/: LoadHistory.tsx
