[package]
name = "patotta-stone-desc-normalizer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open", "dialog-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3.0"
anyhow = { version = "1.0.86", features = ["std"] }
thiserror = "1.0.61"
dotenvy = "0.15.7"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
